# VisionX

./: .gitignore  BENCHMARKS.md  README.md  ROADMAP.md  attributes.py  config.yaml  cross_match.py  match_report.py  plate.py  plate_core.py  plate_report.py  prompt_filter.py  report.py  requirements.txt  stitch.py  tracker.yaml  tracking.py  vision.py
.github/workflows/: ci.yml  release.yml
tests/: bench_detectors.py  bench_stability.py  harness_gui.py  synthetic.py  test_attributes.py  test_consistency.py  test_cross_match.py  test_face_shots.py  test_plate_core.py  test_plate_slow.py  test_plate_unit.py  test_prompt_filter.py  test_report_smoke.py  test_stitch.py  test_tracking.py  test_vision_helpers.py
visionx-app/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
visionx-app/.github/workflows/: release.yml
visionx-app/src/: App.vue  styles.css
visionx-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
visionx-app/src-tauri/capabilities/: default.json
visionx-app/src-tauri/icons/: icon.icns
visionx-app/src-tauri/resources/: config.yaml  tracker.yaml
visionx-app/src-tauri/resources/scripts/: cross_match.py  face_shots.py  plate.py  plate_report.py  prompt_filter.py  report.py  stitch.py  tracking.py  vision.py
visionx-app/src-tauri/src/: logging.rs  main.rs  setup.rs
visionx-app/src/components/: AboutModal.vue  FileSelector.vue  LandingPage.vue  MatchReview.vue  ProgressBar.vue  ReportViewer.vue  SettingsPanel.vue  SetupWizard.vue
